--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   }
 }
