--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
